fix: correct variable names and improve consistency in components ,adjust product prices for better alignment

--- a/src/app/shared/components/products-list/products-list.component.scss
+++ b/src/app/shared/components/products-list/products-list.component.scss
@@ -86,7 +86,7 @@
   }
 }
 
-.productNav {
+.products-Nav {
   @extend %normal-flexible;
   gap: 10px;
   margin-top: 30px;
